# buildbot-fossil

./: Pipfile  README.md  notes.md  pyproject.toml  setup.py
.fossil-settings/: empty-dirs  ignore-glob
buildbot_fossil/: __init__.py  changes.py  steps.py
buildbot_fossil/test/: test_changes.py  test_source.py
docs/: Makefile  conf.py  index.rst  requirements.txt
